<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RepTimeX</string>
    <string name="title_activity_create_routine">Create Routine</string>
    <string name="title_activity_routines">All Routines</string>
    <string name="add_exercise_dialog">Add Exercise</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="save_routine">Save Routine</string>
    <string name="button_back">Save</string>
    <string name="button_start">Start Routine</string>
    <string name="button_start_training">Start</string>
    <string name="label_exercise">Exercise</string>
    <string name="label_duration">Duration</string>
    <string name="label_break">Break</string>
    <string name="label_weight_dist">Weight/Distance</string>
    <string name="hint_exercise">Name of exercise</string>
    <string name="delete_exercise_button">Delete</string>
    <string name="delete_dialog">Delete this routine?</string>
    <string name="DialogYes">OK</string>
    <string name="DialogNo">Cancel</string>
    <string name="DialogClose">Close</string>
    <string name="UnitSeconds">s</string>
    <string name="UnitMinutes">m</string>
    <string name="UnitPounds">lb</string>
    <string name="UnitKg">kg</string>
    <string name="UnitKm">km</string>
    <string name="UnitMetres">m</string>
    <string name="ToastSave">Routine saved</string>
    <string name="ToastCreateRoutine">Creating routine</string>
    <string name="ToastEmptyExercises">Add exercises to this routine before starting training</string>
    <string name="SnackbarAdd">Exercise Added</string>
    <string name="SnackbarSaveData">Routines saved</string>
    <string-array name="units_time">
        <item>s</item>
        <item>m</item>
    </string-array>
    <string-array name="units_weight_dist">
        <item>lb</item>
        <item>kg</item>
        <item>m</item>
        <item>km</item>
    </string-array>
    <string name="createRoutine">Create Routine</string>
    <string name="cancelTraining">Cancel Training</string>
    <string name="routine_name">Routine name</string>
    <string name="all_routines">All Routines</string>
    <string name="menu_about">About</string>
    <string name="routines_info">Press CREATE ROUTINE to create a new routine and add it to the list of routines.\nClick on a routine in the list to edit.\nMaximum of 10 routines.\nPress SAVE to save your routines.\nAuthor: Julius Fan\nActivity Version: 1.0</string>
    <string name="exercises_info">Press ADD EXERCISE to add a new exercise to this routine.\nPress DELETE ROUTINE to delete this routine.\nMaximum of 10 exercises per routine.\nPress SAVE ROUTINE to save this routine and go back.\nPress START ROUTINE to start your training with this routine.\nClick on an exercise in the list to edit or delete it.\nAuthor: Julius Fan\nActivity Version: 1.0</string>

    <string name="restart_button">RESTART ROUTINE</string>
    <string name="start_button">START EXERCISE</string>
    <string name="pause_button">PAUSE</string>

    <string name="menu_timer">Timer</string>
    <string name="label_current_exercise">Current Exercise: </string>
    <string name="toast_exercise_done">Exercise completed!</string>
    <string name="toast_routine_done">Routine completed!</string>
</resources>
